# Calmare

./: Cargo.toml
calmare/: Cargo.toml
calmare-syntax/: Cargo.toml
calmare-syntax/src/: lib.rs  printer.rs
calmare/src/: ed8.rs  lib.rs  macros.rs  number.rs  parse.rs  print.rs  scena.rs  string.rs  types.rs
calmare/src/macros/: strukt.rs
calmare/src/parse/: diagnostic.rs  indent.rs  span.rs
calmare/src/scena/: code.rs  ed6.rs  ed7.rs
calmare/src/scena/code/: expr.rs
calmare/src/scena/ed7/: battle.rs
calmare/tests/: roundtrip_all.rs
examples/: Cargo.toml  scena.rs
examples/examples/: scena.rs
themelios/: Cargo.toml
themelios-gamedata/: Cargo.toml
themelios-gamedata/data/: 3rd.yml  azure.yml  azure_evo.yml  cs1.yml  fc.yml  sc.yml  zero.yml  zero_evo.yml
themelios-gamedata/src/: lib.rs
themelios/insn/: 3rd.yml  azure.yml  azure_evo.yml  fc.yml  fc_evo.yml  sc.yml  zero.yml  zero_evo.yml
themelios/src/: ed8.rs  lib.rs  scena.rs  types.rs  util.rs
themelios/src/scena/: code.rs  ed6.rs  ed7.rs  expr.rs  insn.rs  insn_set.rs
themelios/src/scena/code/: decompile.rs  expr.rs  insn.rs  normalize.rs  read.rs  visit.rs  visit_mut.rs  write.rs
themelios/src/scena/ed7/: battle.rs
themelios/src/scena/insn/: read.rs  write.rs
themelios/tests/: roundtrip_all.rs
